--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -13,21 +13,17 @@
 {% include "includes/navbar.html" %}
 <div class="container mt-5">
     <div class="d-flex flex-column justify-content-center">
-        <p class="text-secondary mb-0 badge text-center" >Gestor de documentos</p>
-        <h1 class="h2 fw-bold m-0 text-center">Seguro. Organizado. Eficiente.</h1>
-        <div class="text-secondary text-center lh-base" style="max-width: 550px;">
-            La solución moderna para gestionar sus documentos. Almacene, colabore y realice un seguimiento de los cambios de forma segura en toda su organización.
-        </div>
-        <div class="mt-3">
-            <a href="{% url "login" %}" class="btn btn-dark">Empezar</a>
-            <button type="button" class="btn btn-light">Aprender más</button>
-        </div>
+        <p class="h5 text-secondary mb-0 text-center fw-bold" >Creación de artefactos de productos software</p>
+        <h1 class="h1 fw-bold m-0 text-center">Seguro. Organizado. Eficiente.</h1>
+        <p class="text-secondary text-center mt-4 h3 fw-light" >
+            Una solución moderna para gestionar sus productos software. Crea, almacena, colabora y realiza un seguimiento de los cambios de forma segura en toda tu aplicación.
+        </p>
     </div>
     <div class="row mt-5">
         <div class="col-sm-6 mt-5">
-            <h2 class="h5 fw-bold">Colaboración</h2>
+            <h2 class="h5 fw-bold">Categoriza</h2>
             <p class="text-start text-secondary">
-                Haga que la colaboración sea fluida con las herramientas de revisión de código integradas.
+                Realize una categorización de productos software con la colaboración de ArteSoft.
             </p>
             <h2 class="h5 fw-bold">Automatización</h2>
             <p class="text-start text-secondary">
