--- a/apps/templates/authentication/login.html
+++ b/apps/templates/authentication/login.html
@@ -3,24 +3,23 @@
 {% load static %}
 
 {% block title %}
-Accounts Login
+@{{app.name}} - Login
 {% endblock title %}
 
 {% block content %}
-<div class="position-relative">
-    <div class="position-absolute top-5 end-8">
-        <a class="icon-link icon-link-hover" style="--bs-icon-link-transform: translate3d(0, -.125rem, 0);" href={% url "index" %}>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
+<div class="mt-2">
+    <div class="position-relative">
+        <a class="position-absolute" href={% url "index" %}>
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-x-lg h2 fw-bold  text-dark" viewBox="0 0 16 16">
+                <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
             </svg>
-            Atras
         </a>
     </div>
 </div>
 
-<div class="d-flex justify-content-center align-middled mt-5">
-    <div class="card shadow p-3 mb-5 rounded bg-body" style="width: 30rem;">
-        <div class="card-head ">
+<div class="d-flex justify-content-center mt-5">
+    <div class="p-3 mb-5 rounded bg-body" style="width: 30rem;">
+        <div class=" ">
             <h1 class="mx-3 h2"><strong>Login</strong></h1>
         </div>
         <div class="card-body ">
@@ -29,7 +28,7 @@ Accounts Login
                 <div class="input-group has-validation mb-2">
                     <span class="input-group-text">@</span>
                     <div class="form-floating is-invalid">
-                    <input type="email" class="form-control form-control-sm" name="email" id="id_email" placeholder="Enter Email" required>
+                    <input type="email" class="form-control form-control-sm shadow" name="email" id="id_email" placeholder="Enter Email" required>
                     <label for="floatingInputGroup2">Email</label>
                     </div>
                     <div class="invalid-feedback">
@@ -43,7 +42,7 @@ Accounts Login
                         </svg>
                     </span>
                     <div class="form-floating is-invalid">
-                        <input type="password" class="form-control form-control-sm" name="password" id="id_password" placeholder="Password">
+                        <input type="password" class="form-control form-control-sm shadow" name="password" id="id_password" placeholder="Password">
                         <label for="floatingPassword">Password</label>          
                     </div>
                     <div class="invalid-feedback">
@@ -53,8 +52,8 @@ Accounts Login
                     no tengo cuenta,
                     <a href="{% url "signup" %}"> Registrate!</a>
                 </div>
-                <div class="d-grid gap-2">
-                    <input type="submit" value="Login" class="btn btn-outline-dark btn-lg">
+                <div class="d-flex justify-content-center mt-3">
+                    <input type="submit" value="Login" class="btn btn-outline-success btn-sm">
                 </div>
             </form>
         </div>
