--- a/apps/templates/authentication/signup.html
+++ b/apps/templates/authentication/signup.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}
-Register
+@{{ app }} - Register
 {% endblock title %}
 
 {% block cnd %}
@@ -12,21 +12,20 @@ Register
 
 
 {% block content %}
-<div class="position-relative">
-    <div class="position-absolute top-5 end-8">
-        <a class="icon-link icon-link-hover" style="--bs-icon-link-transform: translate3d(0, -.125rem, 0);" href={% url "index" %}>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
+<div class="mt-2">
+    <div class="position-relative">
+        <a class="position-absolute" href={% url "index" %}>
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-x-lg h2 fw-bold  text-dark" viewBox="0 0 16 16">
+                <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
             </svg>
-            Atras
         </a>
     </div>
 </div>
-<div class="d-flex justify-content-center mt-3">
+<div class="d-flex justify-content-center mt-3" style="background-image: url('{% static "images/fondo.jpeg" %}');background-repeat: repeat-xy;">
 
-    <div class="card shadow p-3 mb-5 rounded bg-body" style="width: 35rem;">
+    <div class=" mb-5 rounded bg-body" style="width: 30rem;">
         <div class="card-head ">
-            <h1 class="mx-3 h2"><strong>registro</strong></h1>
+            <h1 class=" h2 text-center fw-bold mb-3">Registro</h1>
         </div>
         <div class="card-body ">
             <form method="POST">
@@ -120,8 +119,8 @@ Register
                     <div class="invalid-feedback">
                     </div>
                 </div>
-                <div class="d-grid gap-2">
-                    <input type="submit" value="Guardar registro" class="btn btn-outline-dark btn-lg">
+                <div class="mt-3 d-flex justify-content-center">
+                    <input type="submit" value="Guardar registro" class="btn btn-outline-success btn-sm p-3">
                 </div>
             </form>
         </div>
