--- a/apps/templates/base/base-full-screen.html
+++ b/apps/templates/base/base-full-screen.html
@@ -21,11 +21,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static "css/radiobutton.css" %}">
   </head>
-  <body>
-    {% block content %}{% endblock content %}
+  <body >
+    <div class="mt-0"  style="background-image: url('{% static "images/fondo.jpeg" %}');background-repeat: repeat-xy;">
+      {% block content %}{% endblock content %}      
+      {% include "includes/footer.html" %}
+    </div>
 
-    {% include "includes/footer.html" %}
-    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     {% block javascript %}{% endblock javascript %}
