--- a/apps/templates/includes/menu.html
+++ b/apps/templates/includes/menu.html
@@ -1,5 +1,5 @@
 <div class="mt-3">
-    <div class="radio-buttons">
+    <div class="radio-buttons d-flex flex-column">
         <label class="radio" id="id_button_1">
             <a href="{% url "repository" slug=software.slug %}">
                 <input type="radio" name="radio" checked="">
