--- a/apps/templates/profile/role.html
+++ b/apps/templates/profile/role.html
@@ -7,12 +7,22 @@
 {% endblock title %}
 
 {% block content %}
-<div class="container mt-5">
-  <div class="w-50 d-flex flex-column justify-content-center">
-    <h1 class="h4 fw-bold text-center">
+<div class="mt-2">
+  <div class="position-relative">
+      <a class="position-absolute" href={% url "index" %}>
+          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-x-lg h2 fw-bold  text-dark" viewBox="0 0 16 16">
+              <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
+          </svg>
+      </a>
+  </div>
+</div>
+
+<div class="container mt-5 w-50">
+  <div class=" d-flex flex-column justify-content-center">
+    <h1 class="h1 fw-bold text-center">
       Háblanos un poco de tí
     </h1>
-    <span class="text-secondary text-center">
+    <span class="h3 p-2 fw-light text-secondary text-center">
       Personalizaremos tu espacio de trabajo.
       ¿Cuál es tu ocupación actual?
     </span>
@@ -51,8 +61,8 @@
                     </label>
                 </div>
         </div>
-        <div class="d-flex gap-2 p-2 w-50">
-            <input type="submit" class="btn btn-sm btn-dark mt-2" value="Continue" >
+        <div class="d-flex justify-content-center mt-3">
+          <input type="submit" class="btn btn-sm btn-success mt-2" value="Continue" >
         </div>
       </form>
   </div>
