--- a/apps/templates/profile/university.html
+++ b/apps/templates/profile/university.html
@@ -7,38 +7,45 @@
 {% endblock title %}
 
 {% block content %}
-<div class="container mt-5">
-    <div class="w-50 d-flex flex-column justify-content-center">
-        <h2 class="h4 fw-bold text-center">Cuentanos acerca de tu perfil profesional</h2>
-        <span class="text-secondary text-center">
-          Personalizaremos tu espacio de trabajo.
-          ¿Cuál es tu ocupación actual?
+<div class="mt-2">
+    <div class="position-relative">
+        <a class="position-absolute" href={% url "index" %}>
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-x-lg h2 fw-bold  text-dark" viewBox="0 0 16 16">
+                <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
+            </svg>
+        </a>
+    </div>
+</div>
+
+<div class="container mt-5 w-50">
+    <div class="d-flex flex-column justify-content-center">
+        <h2 class="h1 fw-bold text-center">Cuentanos acerca de tu perfil profesional</h2>
+        <span class="text-secondary text-center fw-light h4">
         </span>
     </div>
-    <form method="POST" class="w-50">
-
+    <form method="POST">
         {% csrf_token %}
-        <div class="mt-3">
-            <h2 class="h5 fw-light">¿Cuál es tu Universidad o Institución? </h2>
+        <div class="mt-3 p-3">
+            <h2 class="h4 text-secondary text-center fw-light">¿Cuál es tu Universidad o Institución? </h2>
             {{ form.university }}
         </div>
-        <div class="mt-3">
+        <div class="mt-3 p-3">
             {% if user.academica.rol == 'PROFESOR' %}
-            <h2 class="h5 fw-light">¿Cuál es tu titulo profesional?</h2>
+            <h2 class="h4 text-secondary text-center fw-light">¿Cuál es tu titulo profesional?</h2>
             {% else %}
-            <h2 class="h5 fw-light">¿Qué estas estudiando?</h2>
+            <h2 class="h4 text-secondary text-center fw-light">¿Qué estas estudiando?</h2>
             {% endif %}
             {{ form.profession }}
         </div>
-        <div class="mt-3">
+        <div class="mt-3 p-3">
             {% if user.academica.rol == 'ESTUDIANTE' %}
-            <h2 class="h5 fw-light">¿Qué semestre estas cursando actualmente?</h2>
+            <h2 class="h4 text-secondary text-center fw-light">¿Qué semestre estas cursando actualmente?</h2>
             {{ form.semester }}
             {% endif %}
         </div>
 
-        <div class="d-grid gap-2 p-2">
-            <input type="submit" class="btn btn-sm btn-dark mt-2" value="Guardar" >
+        <div class="d-flex justify-content-center">
+            <input type="submit" class="btn btn-sm btn-outline-success mt-3" value="Guardar" >
         </div>
     </form>
 </div>
