--- a/apps/templates/repository/new.html
+++ b/apps/templates/repository/new.html
@@ -13,29 +13,41 @@ New repository
 
 
 {% block content %}
+<div class="mt-2">
+    <div class="position-relative">
+        <a class="position-absolute" href={% url "index" %}>
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-x-lg h2 fw-bold  text-dark" viewBox="0 0 16 16">
+                <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
+            </svg>
+        </a>
+    </div>
+</div>
+
 <div class="p-1 container mt-5 mb-5" style="width: 30rem;">
-    <h1 class="h4 fw-bold text-center">Mejora la comprensión de tu software con documentación completa y efectiva.</h1>
+    <h1 class="h2 fw-bold text-center">Mejora la comprensión de tu software con documentación completa y efectiva.</h1>
     <p class="text-secondary text-center"></p>
     <hr>
     <form method="POST">
         {% csrf_token %}
         <input id="id_user" name="user" value={{user.id}} style="display:none;">
         <div class="mb-3">
-            <label for="basic-url" class="form-label m-0 fw-bold text-secondary">¿Cómo se llama tú software?</label>
+            <label for="basic-url" class="h5 form-label m-0 fw-light text-secondary">¿Cómo se llama tú software?</label>
             <div class="input-group">
                 {{form.title}}
             </div>
             <div class="form-text"></div>
         </div>
         <div class="mb-3">
-            <label for="" class="form-label m-0 fw-bold text-secondary">Describe brevemente la principal función que cumple <strong id="id_text"></strong></label>
+            <label for="" class="h5 form-label m-0 fw-light text-secondary">Describe brevemente la principal función que cumple <strong id="id_text"></strong></label>
             {{form.description}}
             <div class="form-text" >
                 Describe la funcion principal de tu software, ten encuenta que no debe superar los <span id="id_count" class="text-secondary fw-light">0</span>/150 caracteres. 
             </div>
 
         </div>
-        <input type="submit" value="Continuar" class="btn btn-outline-dark">
+        <div class="d-flex justify-content-center">
+            <input type="submit" value="Continuar" class="btn btn-outline-success">
+        </div>
     </form>
 
 </div>
