--- a/apps/templates/repository/requeriments.html
+++ b/apps/templates/repository/requeriments.html
@@ -1,5 +1,5 @@
 
-<div class="card shadow p-1 rounded">
+<div class="card p-1 rounded">
   <div class="card-body">
     {% if requeriments %}
     <table class="table">
