cargar logo de software

--- a/apps/templates/repository/category_detail.html
+++ b/apps/templates/repository/category_detail.html
@@ -1,7 +1,7 @@
 <div class="p-2">
     <table class="table table table-borderless">
         <tr>
-            <th scope="col">Categoria</th>
+            <th scope="col">Tipo</th>
             <td>
                 {{ software.category.type_software }}
             </td>
