--- a/apps/templates/authentication/login.html
+++ b/apps/templates/authentication/login.html
@@ -18,9 +18,10 @@
 </div>
 
 <div class="d-flex justify-content-center mt-5">
-    <div class="p-3 mb-5 rounded bg-body" style="width: 30rem;">
-        <div class=" ">
-            <h1 class="mx-3 h2"><strong>Login</strong></h1>
+    <div class="p-4 mb-5 rounded bg-body shadow" style="width: 30rem;">
+        <div class="text-center">
+            <h1 class="mx-3 h2"><strong>{{app.name}}</strong></h1>
+            <h1 class="mx-3 h4"><strong>Login</strong></h1>
         </div>
         <div class="card-body ">
             <form method="POST">
