--- a/apps/templates/base/base-full-screen.html
+++ b/apps/templates/base/base-full-screen.html
@@ -5,6 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="{% static "css/upload.css" %}">
     <title>
       {% block title %}
       Bootstrap demo :Base full screen
@@ -21,8 +22,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static "css/radiobutton.css" %}">
   </head>
-  <body >
-    <div class="mt-0"  style="background-image: url('{% static "images/fondo.jpeg" %}');background-repeat: repeat-xy;">
+  <body  class="bg-body-tertiary">
+    {% comment %} style="background-image: url('{% static "images/fondo.jpeg" %}');background-repeat: repeat-xy;" {% endcomment %}
+    <div>
       {% block content %}{% endblock content %}      
       {% include "includes/footer.html" %}
     </div>
