--- a/apps/templates/base/index.html
+++ b/apps/templates/base/index.html
@@ -29,16 +29,15 @@
 
 </head>
 
-<body>
+<body class="bg-body-tertiary">
 
   {% include "includes/navbar.html" %}
 
-
-
+  <div class="container mt-5">
   {% block content %}{% endblock content %}
-
-  {% include "includes/footer.html" %}
   
+  {% include "includes/footer.html" %}
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous">
