--- a/apps/templates/includes/navbar.html
+++ b/apps/templates/includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-white p-2">
+<nav class="navbar navbar-expand-lg bg-white p-2 shadow">
   <div class="d-flex justify-content-between" style="width:100%;">
 
     <a class="navbar-brand" href="{% url 'dashboard' %}">{{app.name.upper}}</a>
@@ -26,13 +26,26 @@
       </ul>
     </div>
     {% if user.is_authenticated %}
-      <div class="rounded border p-1 btn">
-        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-person"
-          viewBox="0 0 16 16">
-          <path
-            d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z" />
-        </svg>
+    <div class="dropstart">
+      <div class="rounded p-1 btn">
+        <button class="btn dropdown-toggle" style="border:0;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-person"
+            viewBox="0 0 16 16">
+            <path
+              d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z" />
+          </svg>
+        </button>
+        <ul class="dropdown-menu">
+          <li class="p-2">{{user.email}}</li>
+          <hr>
+          <li><a class="dropdown-item" href="#">Action</a></li>
+          <li><a class="dropdown-item" href="#">Another action</a></li>
+          <li><a class="dropdown-item" href="{% url "logout" %}">
+            Cerrar sessión
+          </a></li>
+        </ul>
       </div>
+    </div>
     {% else %}
       <a href="{% url "login" %}" class="btn btn-outline-dark">Ingresar</a>
       <a href="{% url "signup" %}" class="btn">Registro</a>
