--- a/apps/templates/repository/new.html
+++ b/apps/templates/repository/new.html
@@ -15,7 +15,7 @@ New repository
 {% block content %}
 <div class="mt-2">
     <div class="position-relative">
-        <a class="position-absolute" href={% url "index" %}>
+        <a class="position-absolute" href={% url "dashboard" %}>
             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-x-lg h2 fw-bold  text-dark" viewBox="0 0 16 16">
                 <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
             </svg>
